--- a/optimisation.vcxproj.filters
+++ b/optimisation.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="src\StopCriterion.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\AbsValueSC.h">
