--- a/optimisation.vcxproj.filters
+++ b/optimisation.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="src\Matrix.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="src\RectArea.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\AbsValueSC.h">
@@ -90,6 +93,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="include\Matrix.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="include\RectArea.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
